assets/css/index.scss
div.index-container {
  background-color: rgb(1, 6, 6);
}

div.dark {
  color: rgb(255, 255, 255);
  background: rgb(1, 6, 6);

  h1.header {
    color: rgb(247, 248, 250);
  }

  p.caption {
    color: rgb(255, 23, 68);
  }
}

div.light {
  color: #101522;
  background: white;

  h1.header {
    color: #101522;
  }
}

div.section {
  padding: 5% 0;

  div.container {
    display: grid;
    width: 100%;
    max-width: 1100px;
    margin: 0 auto;
    padding: 0 24px;
    -webkit-box-pack: center;
    justify-content: center;
    @media screen and (max-width: 900px) {
      padding: 0 3px;
    }

    div.inner-content {
      z-index: 9;
      display: grid;
      grid-auto-columns: minmax(auto, 1fr);
      -webkit-box-align: center;
      align-items: center;
      grid-template-areas: "col1 col2";
      @media screen and (max-width: 900px) {
        grid-template-areas: "col1 col1" "col2 col2";
      }

      div.text-box {
        margin-bottom: 15px;
        padding: 0 15px;
        grid-area: col1 / col1 / col1 / col1;

        p.caption {
          color: rgb(255, 23, 68);
          font-size: 16px;
          line-height: 16px;
          font-weight: 700;
          letter-spacing: 1.4px;
          text-transform: uppercase;
          margin-bottom: 16px;
        }

        h1.header {
          font-family: "Permanent Marker", cursive;
          transform: rotate(-4deg);
          margin-bottom: 24px;
          font-size: 48px;
          line-height: 1.1;
          font-weight: 600;
        }

        p.details {
          max-width: 440px;
          margin-bottom: 35px;
          font-size: 18px;
          line-height: 24px;
        }
      }

      div.image-box {
        margin-bottom: 15px;
        padding: 0 15px;
        grid-area: col2 / col2 / col2 / col2;

        div.image-wrapper {
          max-width: 555px;

          img {
            width: 70%;
            @media screen and (max-width: 900px) {
              width: 100%;
            }
          }
        }
      }
    }
  }
}

#about-me {
  height: 100vh;
  display: flex;
  justify-content: center;
  grid-template-areas: "col1 col2";
  @media screen and (max-width: 900px) {
    grid-template-areas: "col1 col1" "col2 col2";
  }
}

#skills {
  height: 100vh;
  display: flex;
  justify-content: center;

  div.inner-content {
    grid-template-areas: "col2 col1";
  }
  @media screen and (max-width: 900px) {
    height: calc(125vh);

    div.inner-content {
      grid-template-areas: "col1" "col2";
    }
  }
}

#experience {
  padding: 10%;
  @media screen and (max-width: 900px) {
    padding: 15% 3%;
  }

  h1.header {
    font-family: "Permanent Marker", cursive;
    transform: rotate(-4deg);
    color: rgb(255, 23, 68);
    text-align: center;
    font-size: 2.5rem;
  }

  div.job-details {
    margin: 10px 0 50px;

    h2 {
      font-size: 1.75rem;
      color: rgb(255, 255, 255);
      @media screen and (max-width: 900px) {
        font-size: 20px;
      }
    }

    div.job-description {
      margin-top: 1rem;
    }
  }

  div.training-list {
    div {
      margin: 10px 0;

      a {
        color: rgb(255, 255, 255);
        text-decoration: none;
        font-size: 18px;
        padding: 5px;

        &:hover {
          color: #ff1744;
          transition: all 0.3s ease-in-out;
        }
      }
    }
  }
}

#interests {
  height: 50vh;
  margin-top: -500px;
  display: flex;
  justify-content: center;
  @media screen and (max-width: 900px) {
    margin-top: -750px;
    height: 50vh;

    div.inner-content {
      grid-template-areas: "col2" "col1";
    }
  }
}

#contact {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  @media screen and (max-width: 900px) {
    padding: 3%;
  }

  div.form-container {
    margin: 0 auto;
    width: 33%;
    @media screen and (max-width: 900px) {
      width: 90%;
    }

    h1 {
      font-family: "Permanent Marker", cursive;
      transform: rotate(-4deg);
      color: rgb(255, 23, 68);
      text-align: center;
      font-size: 2.5rem;
    }

    form {
      input.text {
        margin: 10px auto;
        height: 40px;
        width: 100%;
        padding: 5px;
      }

      textarea.textarea {
        margin: 10px auto;
        padding: 5px;
        height: 150px;
        width: 100%;
        outline: none;
        resize: none;
      }

      div.button-container {
        display: flex;
        justify-content: center;
        align-items: center;

        button.submit {
          margin-top: 20px;
          border-radius: 50px;
          background: rgb(255, 23, 68);
          white-space: nowrap;
          padding: 10px 22px;
          color: rgb(1, 6, 6);
          font-size: 16px;
          outline: none;
          border: none;
          cursor: pointer;
          transition: all 0.2s ease-in-out 0s;
          text-decoration: none;
        }
      }
    }
  }
}

